# py-opendisplay

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
examples/: listen_advertisements.py
src/opendisplay/: __init__.py  battery.py  device.py  discovery.py  display_palettes.py  exceptions.py
src/opendisplay/encoding/: __init__.py  bitplanes.py  dithering.py  images.py
src/opendisplay/models/: __init__.py  advertisement.py  capabilities.py  config.py  config_json.py  enums.py  led_flash.py
src/opendisplay/protocol/: __init__.py  chunking.py  commands.py  config_parser.py  config_serializer.py  responses.py
src/opendisplay/transport/: connection.py
tests/: conftest.py
tests/unit/: test_battery.py  test_device_led_activate.py  test_device_manufacturer.py  test_device_upload_rotation.py  test_encoding_bitplanes.py  test_models_advertisement.py  test_models_config.py  test_models_led_flash.py  test_module_enums.py  test_protocol_commands.py  test_protocol_responses.py  test_required_packets.py
